@@ -5,98 +5,153 @@
 | Episode | 62 |
 | Title | JVM Flags and Tuning |
 | Catalog handbook column | 62 |
-| Narration source script | `make_episode_62.py` |
-| Spoken form | Short documentary beats (Chatterbox / Kokoro render) |
+| Narration source script | Expanded review narration (4–15 min target) |
+| Spoken form | Conversational documentary beats + walkthrough example |
+| Runtime target | **4–15 minutes** (aim ~8–12) |
 
 ## Full narration (spoken beats)
 
-### Scene `hook` (renderer: `hook`)
+### Scene `hook`
 
-1. Episode Sixty-One covered soft, weak, and phantom references.
-2. Reference types shape object lifetime — JVM flags shape runtime behavior.
-3. Every production JVM starts with dozens of implicit defaults.
-4. Heap size, collector choice, and logging flags change latency and stability.
-5. Copying flags from a blog post without measurement is a common failure mode.
-6. Today — JVM flags, heap sizing, GC switches, and a measurement-first mindset.
+1. In the last episode, we worked through Reference Types.
+2. If that made sense, today builds on it. If it was fuzzy, today usually makes it click.
+3. Flags are experiments — change one variable, measure against SLOs.
+4. I am not going to machine-gun definitions at you.
+5. We will go slowly: mental model, worked example, traps, then an interview-ready answer.
+6. Settle in for a real lesson — roughly eight to twelve minutes of talking, with room up to about fifteen if you pause on the example.
+7. The floor is four minutes, but we are not doing the thin headline version anymore.
 
-### Scene `title` (renderer: `title`)
+### Scene `title`
 
-1. Episode Sixty-Two.
-2. JVM Flags and Tuning Basics.
+1. Episode 62.
+2. JVM Flags and Tuning.
+3. By the end, you should explain this out loud without reading notes.
+4. If you can teach it, you own it.
 
-### Scene `heap_sizing` (renderer: `heap_sizing`)
+### Scene `concept`
 
-1. Heap sizing starts with -Xms and -Xmx.
-2. -Xms sets initial heap — -Xmx sets maximum heap the JVM may use.
-3. Matching Xms to Xmx avoids resize pauses during steady state.
-4. Too small — frequent GC and OutOfMemoryError under load.
-5. Too large — long GC pauses and wasted RAM on shared hosts.
-6. Start from observed usage under realistic traffic — add headroom, not guesses.
+1. First, the why — then the syntax.
+2. Picture JVM Flags and Tuning clearly.
+3. Here are the points that matter when code meets production:
+4. Point 1: Set heap intentionally.
+5. If you remember only one thing, make it that.
+6. Point 2: Enable GC logging.
+7. This is usually where tutorials stop — we will not.
+8. Point 3: Prefer evidence over folklore.
+9. Point 4: Document why a flag exists.
+10. Point 5: Remove flags that no longer earn their keep.
+11. That last point is often the senior-level differentiator in interviews.
+12. Notice how these points connect: mechanism, usage, and failure mode.
+13. Hold them in your head while we look at code.
 
-### Scene `gc_flags` (renderer: `gc_flags`)
+### Scene `example_intro`
 
-1. Collector flags select the garbage collector implementation.
-2. -XX:+UseG1GC — default general-purpose collector since Java 9.
-3. -XX:+UseZGC — low-pause collector for large heaps and strict latency.
-4. -XX:+UseParallelGC — throughput-oriented for batch workloads.
-5. MaxGCPauseMillis tunes G1 pause target — best effort, not a guarantee.
-6. Collector choice is empirical — validate with GC logs on your workload.
+1. Example time. Do not skim.
+2. Every line maps to something we just said.
+3. If you need to, pause and retype it yourself after the walkthrough.
 
-### Scene `diagnostic_flags` (renderer: `diagnostic_flags`)
+```bash
+java -Xms512m -Xmx512m -XX:+UseG1GC -Xlog:gc*:file=gc.log -jar app.jar
+```
 
-1. Diagnostic flags make invisible behavior visible.
-2. -Xlog:gc* enables unified GC logging in modern JDK releases.
-3. -XX:+HeapDumpOnOutOfMemoryError writes a heap dump on OOM.
-4. -XX:ErrorFile=path captures fatal JVM error details.
-5. PrintFlagsFinal lists every flag and its effective value at startup.
-6. Flight Recorder and async profilers complement flags — use them before tuning blind.
+### Scene `example_walk`
 
-### Scene `measurement_mindset` (renderer: `measurement_mindset`)
+1. Walkthrough.
+2. Walk this like pair-programming.
+3. Focus on what each line means.
+4. Connect to the failure mode.
+5. Look at `java -Xms512m -Xmx512m -XX:+UseG1GC -Xlog:gc*:file=gc.log -jar app.jar`.
+6. If you can explain those lines to a teammate, you understand the episode.
+7. If you only recognize the keywords, rewind the concept section once.
 
-1. Tuning without measurement is guessing.
-2. Establish a baseline — latency, throughput, GC pause times, heap usage.
-3. Change one variable at a time — flag, heap size, or collector.
-4. Replay production traffic or run load tests that match real patterns.
-5. Compare before and after with the same dataset and duration.
-6. Document what you changed and why — future you will thank present you.
+### Scene `deeper`
 
-### Scene `common_flags` (renderer: `common_flags`)
+1. One level deeper — the part short videos skip.
+2. Ask: what happens under load? Under failure? Under bad input?
+3. With JVM Flags and Tuning, mastery is not more jargon.
+4. Mastery is knowing which trade-off you are choosing: clarity versus speed, flexibility versus safety, simplicity versus control.
+5. In production, second-order effects matter: the next engineer’s reading speed, three-a.m. operability, and whether tests still tell the truth.
+6. So when you adopt a feature from this episode, adopt the operational story too.
+7. Write one sentence in your notes: when I use this, I accept ___, and I mitigate ___ .
 
-1. A practical starter flag set for services.
-2. java -Xms4g -Xmx4g -XX:+UseG1GC -XX:MaxGCPauseMillis=200.
-3. Add -Xlog:gc*:file=gc.log:time,uptime,level,tags for GC analysis.
-4. Container deployments — respect cgroup memory limits with -XX:MaxRAMPercentage.
-5. Never set flags you cannot explain in an incident postmortem.
-6. Flags are tools — the goal is reliable behavior under real load.
+### Scene `mistakes`
 
-### Scene `mistakes` (renderer: `mistakes`)
+1. Reality check — common mistakes.
+2. Mistake 1: Cargo-cult flag lists.
+3. I have seen this in real code reviews — including my own older code.
+4. Mistake 2: Tuning without load tests.
+5. I have seen this in real code reviews — including my own older code.
+6. Mistake 3: Leaving debug flags on forever.
+7. I have seen this in real code reviews — including my own older code.
+8. If you recognize one, good. Recognition is the first control.
 
-1. Three common mistakes.
-2. One — copying another team's flags without matching workload or heap.
-3. Two — setting Xmx to all available RAM — no room for metaspace or OS cache.
-4. Three — tuning GC before fixing allocation hotspots in application code.
-5. Also — changing five flags at once — impossible to attribute improvements.
-6. Measure first, tune second, verify third — always in that order.
+### Scene `interview`
 
-### Scene `interview` (renderer: `interview`)
+1. Interview time. Speak like someone who has shipped.
+2. Question: First tuning step?
+3. Answer: Metrics + GC logs under realistic load.
+4. Then add one trade-off or failure-mode sentence.
+5. That extra sentence is what interviewers remember.
+6. Practice once without looking at the screen.
 
-1. Interview question — how do you tune JVM flags for a service?
-2. Start with baseline metrics — latency percentiles, GC logs, heap usage.
-3. Size heap from observed peak plus headroom — match Xms and Xmx when stable.
-4. Choose collector for workload — G1 default, ZGC for strict pause goals.
-5. Enable GC logging and OOM heap dumps before changing anything.
-6. Change one knob, re-test, document — never tune from blog posts alone.
+### Scene `amplify`
 
-### Scene `teaser` (renderer: `teaser`)
+1. Let me press on point 1 a bit harder.
+2. Set heap intentionally.
+3. In practice, this shows up when a teammate asks why a change is risky — you answer with the mechanism, not a slogan.
+4. If you cannot explain the failure mode, you do not own the feature yet.
+5. Let me press on point 2 a bit harder.
+6. Enable GC logging.
+7. In practice, this shows up when a teammate asks why a change is risky — you answer with the mechanism, not a slogan.
+8. If you cannot explain the failure mode, you do not own the feature yet.
+9. Let me press on point 3 a bit harder.
+10. Prefer evidence over folklore.
+11. In practice, this shows up when a teammate asks why a change is risky — you answer with the mechanism, not a slogan.
+12. If you cannot explain the failure mode, you do not own the feature yet.
+13. Let me press on point 4 a bit harder.
+14. Document why a flag exists.
+15. In practice, this shows up when a teammate asks why a change is risky — you answer with the mechanism, not a slogan.
+16. If you cannot explain the failure mode, you do not own the feature yet.
+17. Let me press on point 5 a bit harder.
+18. Remove flags that no longer earn their keep.
+19. In practice, this shows up when a teammate asks why a change is risky — you answer with the mechanism, not a slogan.
+20. If you cannot explain the failure mode, you do not own the feature yet.
 
-1. Flags control the JVM — object layout controls how much memory each instance uses.
-2. Episode Sixty-Three — Object Layout and Compressed Oops.
-3. Headers, padding, and pointer compression on 64-bit heaps.
-4. See you there.
+### Scene `handbook_spine`
 
-_Total beats: **54** across **10** scenes._
+1. How this maps to the reference handbook mindset:
+2. The handbook teaches concept, internal working, mistakes, and interview questions.
+3. We are doing the same job in spoken form — compressed for video, but not reduced to headlines.
+4. So if a section felt familiar, good: that means the curriculum spine is intact.
+
+### Scene `practice`
+
+1. Mini practice before you go.
+2. Pause the video and do this without looking:
+3. 1) Say out loud what JVM Flags and Tuning is for in one sentence.
+4. 2) Write the example from memory — approximate is fine.
+5. 3) Name one mistake from this episode and how you would catch it in review.
+6. That three-step drill turns watching into learning.
+### Scene `summary`
+
+1. Landing the plane.
+2. Today was JVM Flags and Tuning.
+3. You got a mental model, a worked example, traps, and an interview answer.
+4. Pause and retype the example from memory if you can — that beats passive rewatching.
+5. Next time you see this topic in a codebase, you should feel oriented, not lost.
+
+### Scene `teaser`
+
+1. Next episode keeps the story moving.
+2. Episode 63: Object Layout.
+3. It builds directly on today’s mental model.
+4. If something clicked, stick around. I will see you there.
+
+_Total beats: **94** — expanded for ~8–12 minute conversational delivery (4-minute floor, 15-minute ceiling)._
 
 ## Source attribution (reference document)
+
+(reference document)
 
 Reference document (user attachment): **`Java_JVM_Handbook_GPT55__1_.html`** — *Java & JVM Handbook — 80 Lessons*.
 
@@ -119,3 +174,5 @@ Reference document (user attachment): **`Java_JVM_Handbook_GPT55__1_.html`** —
 - **`mistakes`** — starts from: _Three common mistakes._
 - **`interview`** — starts from: _Interview question — how do you tune JVM flags for a service?_
 - **`teaser`** — starts from: _Flags control the JVM — object layout controls how much memory each instance uses._
+
+- **Runtime note:** Narration expanded for a **4–15 minute** conversational lesson (aim ~8–12) with a worked example — not the ultra-short headline cut.
